fix config not saving